--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
-title: Shahid Ashraf
 layout: page
-description: Very good site
+title: LA_Fast_Fall_2023
+permalink: /URL-PATH
+description: Weekly Course Outline
 theme: jekyll-theme-minimal
 markdown: GFM
