--- a/_config.yml
+++ b/_config.yml
@@ -2,5 +2,6 @@ layout: page
 title: LA_Fast_Fall_2023
 permalink: /URL-PATH
 description: Weekly Course Outline
+email: shahid.ashraf@fast.nu.edu.pk
 theme: jekyll-theme-minimal
 markdown: GFM
